--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,11 @@
 group 'com.xuren'
 version '1.0-SNAPSHOT'
 
-
-
 apply from: "$rootDir/dependencies.gradle"
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'war'
+//    apply plugin: 'war'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
