--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -12,5 +12,9 @@ repositories {
 }
 
 dependencies {
+    compile libs.jsonrpc
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile project(":model")
 }
