--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -1,6 +1,21 @@
-plugins {
-    id 'java'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+    }
+
 }
+
+apply plugin: 'org.springframework.boot'
+
+//以上配置 将 manager项目连同其依赖包 一起打成可执行jar包
+apply plugin: 'java'
+//plugins {
+//    id 'java'
+//}
 
 group 'com.xuren'
 version '1.0-SNAPSHOT'
@@ -13,10 +28,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    
+    compile "org.springframework.boot:spring-boot-gradle-plugin:1.5.3.RELEASE"
+    
     //依赖model模块
     compile project(":model")
     compile project(":common")
+    compile project(":gateway")
     libs.mybatis
 
 }
