--- a/sell/build.gradle
+++ b/sell/build.gradle
@@ -1,6 +1,17 @@
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+    }
+
 }
+
+apply plugin: 'org.springframework.boot'
+
+//以上配置 将 manager项目连同其依赖包 一起打成可执行jar包
+apply plugin: 'java'
 
 group 'com.xuren'
 version '1.0-SNAPSHOT'
@@ -15,4 +26,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile project(":model")
+    compile project(":gateway")
+
+    libs.jsonrpc
+    
 }
